--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="footer sm:footer-horizontal bg-base-200 text-base-content p-10">
+<footer class="bg-afida-green footer sm:footer-horizontal text-base-content p-10">
   <nav>
     <h6 class="footer-title">Services</h6>
     <%= link_to "Branding", branding_path, class: "link link-hover" %>
@@ -15,7 +15,8 @@
     <%= link_to "Privacy policy", privacy_path, class: "link link-hover" %>
   </nav>
 </footer>
-<footer class="footer bg-base-200 text-base-content border-base-300 border-t px-10 py-4">
+
+<footer class="bg-afida-green footer text-base-content border-base-300 border-t px-10 py-4">
   <aside class="grid-flow-col items-center">
     <%= render "shared/logo" %>
     <p>
