--- a/app/views/cart_items/_index.html.erb
+++ b/app/views/cart_items/_index.html.erb
@@ -1,10 +1,10 @@
 <div class="container mx-auto px-4 py-8 text-gray-800">
   <%= turbo_frame_tag "cart" do %>
     <% if Current.cart && Current.cart.cart_items.any? %>
-      <h1 class="text-3xl font-bold text-center mb-8">Your Shopping Basket</h1>
+      <h1 class="text-3xl font-medium text-center mb-8">Your Shopping Basket</h1>
 
       <div class="bg-white shadow-md rounded-lg overflow-hidden">
-        <div class="hidden md:grid grid-cols-6 gap-4 items-center p-4 border-b font-semibold text-gray-600">
+        <div class="hidden md:grid grid-cols-6 gap-4 items-center p-4 border-b font-medium text-gray-600">
           <div class="col-span-2">Product</div>
           <div class="text-center">Price</div>
           <div class="text-center">Quantity</div>
@@ -17,7 +17,7 @@
       <div class="mt-8 flex flex-col md:flex-row justify-between items-start gap-8">
         <div class="w-full md:w-1/2 lg:w-1/3">
           <%# Coupon Code / Notes - Placeholder %>
-          <%# <h3 class="text-xl font-semibold mb-4">Discount Codes</h3> %>
+          <%# <h3 class="text-xl font-medium mb-4">Discount Codes</h3> %>
           <%# <div class="flex"> %>
           <%#   <input type="text" placeholder="Enter coupon code" class="input input-bordered flex-grow mr-2"> %>
           <%#   <button class="btn btn-secondary">Apply</button> %>
@@ -25,7 +25,7 @@
         </div>
 
         <div class="w-full md:w-1/2 lg:w-1/3 bg-gray-100 p-6 rounded-lg shadow-md">
-          <h2 class="text-2xl font-semibold mb-6">Basket Summary</h2>
+          <h2 class="text-2xl font-medium mb-6">Basket Summary</h2>
 
           <div class="flex justify-between mb-3 text-gray-700">
             <span>Shipping</span>
@@ -51,7 +51,7 @@
           <%#   <span>Calculate at checkout</span> %>
           <%# </div> %>
 
-          <div class="flex justify-between text-xl font-bold text-gray-800 border-t pt-4 mt-4">
+          <div class="flex justify-between text-xl font-medium text-gray-800 border-t pt-4 mt-4">
             <span>Total</span>
             <span id="grand_total">
               <%= number_to_currency(Current.cart.subtotal_amount + Current.cart.vat_amount) %>
@@ -62,7 +62,7 @@
             <%= button_to "Proceed to Checkout", checkout_path, class: "btn btn-primary btn-block text-lg", data: { turbo: false } %>
           </div>
           <div class="text-center mt-12">
-            <%= link_to "Continue Shopping", products_path, class: "link text-primary-500 hover:text-primary-600 font-semibold", data: { turbo: false } %>
+            <%= link_to "Continue Shopping", products_path, class: "link text-primary-500 hover:text-primary-600 font-medium", data: { turbo: false } %>
           </div>
         </div>
       </div>
