--- a/app/views/shared/_basket_counter.html.erb
+++ b/app/views/shared/_basket_counter.html.erb
@@ -10,7 +10,7 @@
       tabindex="0"
       class="card card-compact dropdown-content bg-base-100 z-[1] mt-3 w-52 shadow">
       <div class="card-body text-center">
-          <span class="text-lg font-bold"><%= pluralize(Current.cart.items_count, "Item") %></span>
+          <span class="text-lg font-medium"><%= pluralize(Current.cart.items_count, "Item") %></span>
           <span class="text-lg text-secondary"><%= number_to_currency(Current.cart.subtotal_amount) %> <span class="text-sm text-gray-500">(ex. VAT)</span></span>
 
         <div class="card-actions p-2">
