--- a/app/views/shared/_basket_counter.html.erb
+++ b/app/views/shared/_basket_counter.html.erb
@@ -3,15 +3,15 @@
     <div tabindex="0" role="button" class="btn btn-circle">
       <div class="indicator">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" /> </svg>
-        <span class="badge badge-sm indicator-item bg-afida-green text-neutral"><%= Current.cart.items_count %></span>
+          <span class="badge badge-sm indicator-item bg-afida-green text-neutral"><%= Current.cart&.items_count || 0 %></span>
       </div>
     </div>
     <div
       tabindex="0"
       class="card card-compact dropdown-content bg-base-100 z-[1] mt-3 w-52 shadow">
       <div class="card-body text-center">
-          <span class="text-lg font-medium"><%= pluralize(Current.cart.items_count, "Item") %></span>
-          <span class="text-lg text-secondary"><%= number_to_currency(Current.cart.subtotal_amount) %> <span class="text-sm text-gray-500">(ex. VAT)</span></span>
+          <span class="text-lg font-medium"><%= pluralize(Current.cart&.items_count, "Item") %></span>
+          <span class="text-lg text-secondary"><%= number_to_currency(Current.cart&.subtotal_amount) %> <span class="text-sm text-gray-500">(ex. VAT)</span></span>
 
         <div class="card-actions p-2">
           <%= link_to "View basket", cart_path, class: "btn btn-primary btn-block", data: { turbo: false } %>
