--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -46,6 +46,11 @@
           <li><%= link_to "Orders", orders_path %></li>
           <li><%= button_to "Logout", session_path, method: :delete %></li>
         </ul>
+      <% else %>
+        <div class="flex items-center space-x-2">
+          <%= link_to "Sign In", new_session_path, class: "btn btn-primary btn-sm" %>
+          <%= link_to "Sign Up", new_registration_path, class: "btn btn-primary btn-sm" %>
+        </div>
       <% end %>
     </div>
   </div>
