--- a/app/views/cart_items/_index.html.erb
+++ b/app/views/cart_items/_index.html.erb
@@ -62,7 +62,7 @@
             <%= button_to "Proceed to Checkout", checkout_path, class: "btn btn-primary btn-block text-lg", data: { turbo: false } %>
           </div>
           <div class="text-center mt-12">
-            <%= link_to "Continue Shopping", products_path, class: "link text-primary-500 hover:text-primary-600 font-medium", data: { turbo: false } %>
+            <%= link_to "Continue Shopping", shop_path, class: "link text-primary-500 hover:text-primary-600 font-medium", data: { turbo: false } %>
           </div>
         </div>
       </div>
@@ -73,7 +73,7 @@
         </svg>
         <h2 class="mt-4 text-2xl font-semibold text-gray-700">Your shopping basket is empty</h2>
         <div class="mt-6">
-          <%= link_to "Start Shopping", products_path, class: "btn btn-primary", data: { turbo: false } %>
+          <%= link_to "Start Shopping", shop_path, class: "btn btn-primary", data: { turbo: false } %>
         </div>
       </div>
     <% end %>
