Show logged in user initials

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -30,13 +30,11 @@
 
     <div class="dropdown dropdown-end">
       <% if authenticated? %>
-        <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
-          <div class="w-10 rounded-full">
-            <img
-              alt="Tailwind CSS Navbar component"
-              src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
+          <div tabindex="0" role="button" class="hover:cursor-pointer avatar avatar-placeholder">
+            <div class="bg-neutral text-neutral-content w-10 rounded-full">
+              <span class="text-xl"><%= Current.user.initials %></span>
+            </div>
           </div>
-        </div>
         <ul
           tabindex="0"
           class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
