Show product material

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -45,7 +45,7 @@
         <%= @product.description %>
       </p>
 
-      <h3 class="text-lg font-semibold my-4">Specifications</h3>
+      <h3 class="text-sm font-semibold my-4">Specifications</h3>
       <% if @selected_variant.variant_attributes.any? %>
         <div class="overflow-x-auto rounded-box border border-base-content/5 bg-base-100">
           <table class="table table-zebra table-pin-cols">
