--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -11,67 +11,55 @@
     </div>
   <% end %>
 
-  <div class="my-5">
-    <%= form.label :active %>
-    <%= form.check_box :active, class: ["block shadow-sm rounded-md border px-3 py-2 mt-2", {"border-gray-400 focus:outline-blue-600": product.errors[:active].none?, "border-red-400 focus:outline-red-600": product.errors[:active].any?}] %>
-  </div>
+  <fieldset class="fieldset mt-8">
+    <legend class="fieldset-legend">Product Details</legend>
 
-  <div class="my-5">
-    <%= form.label :featured %>
-    <%= form.check_box :featured, class: ["block shadow-sm rounded-md border px-3 py-2 mt-2", {"border-gray-400 focus:outline-blue-600": product.errors[:featured].none?, "border-red-400 focus:outline-red-600": product.errors[:featured].any?}] %>
-  </div>
+    <div class="grid grid-cols-2 gap-x-6 gap-y-4 w-1/2 mt-4">
+      <%= form.label :active, class: "label" %>
+      <%= form.check_box :active, class: "toggle toggle-primary toggle-lg" %>
 
-  <div class="my-5">
-    <%= form.label :name %>
-    <%= form.text_field :name, class: ["block shadow-sm rounded-md border px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": product.errors[:name].none?, "border-red-400 focus:outline-red-600": product.errors[:name].any?}] %>
-  </div>
+      <%= form.label :featured, class: "label" %>
+      <%= form.check_box :featured, class: "toggle toggle-primary toggle-lg" %>
 
-  <div class="my-5">
-    <%= form.label :description %>
-    <%= form.textarea :description, rows: 4, class: ["block shadow-sm rounded-md border px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": product.errors[:description].none?, "border-red-400 focus:outline-red-600": product.errors[:description].any?}] %>
-  </div>
+      <%= form.label :name, "Name (required)", class: "label" %>
+      <%= form.text_field :name, class: "input", required: true %>
 
-  <div class="my-5">
-    <%= form.label :pac_size %>
-    <%= form.text_field :pac_size, class: ["block shadow-sm rounded-md border px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": product.errors[:pac_size].none?, "border-red-400 focus:outline-red-600": product.errors[:pac_size].any?}] %>
-  </div>
+      <%= form.label :pac_size, "Pack Size", class: "label" %>
+      <%= form.text_field :pac_size, class: "input" %>
 
-  <div class="my-5">
-    <%= form.label :category %>
-    <%= form.select :category_id, Category.all.map { |category| [category.name, category.id] }, {}, class: ["block shadow-sm rounded-md border px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": product.errors[:category].none?, "border-red-400 focus:outline-red-600": product.errors[:category].any?}] %>
-  </div>
+      <%= form.label :category, class: "label" %>
+      <%= form.select :category_id, Category.all.map { |category| [category.name, category.id] }, {}, class: "select select-bordered" %>
 
-  <div class="my-5">
-    <%= form.label :image %>
-    <%= form.file_field :image, class: ["block shadow-sm rounded-md border px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": product.errors[:image].none?, "border-red-400 focus:outline-red-600": product.errors[:image].any?}] %>
-  </div>
+      <%= form.label :image, class: "label" %>
+      <%= form.file_field :image, class: "file-input file-input-bordered" %>
 
-  <div class="my-5">
-    <%= form.label :slug %>
-    <%= form.text_field :slug, class: ["block shadow-sm rounded-md border px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": product.errors[:slug].none?, "border-red-400 focus:outline-red-600": product.errors[:slug].any?}] %>
-  </div>
+      <%= form.label :description, class: "label" %>
+      <%= form.text_area :description, rows: 4, class: "textarea textarea-bordered w-full" %>
+    </div>
+  </fieldset>
 
-  <div class="my-5">
-    <%= form.label :meta_title %>
-    <%= form.text_field :meta_title, class: ["block shadow-sm rounded-md border px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": product.errors[:meta_title].none?, "border-red-400 focus:outline-red-600": product.errors[:meta_title].any?}] %>
-  </div>
+  <fieldset class="fieldset my-8">
+    <legend class="fieldset-legend">SEO & Meta Information</legend>
 
-  <div class="my-5">
-    <%= form.label :meta_description %>
-    <%= form.text_field :meta_description, class: ["block shadow-sm rounded-md border px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": product.errors[:meta_description].none?, "border-red-400 focus:outline-red-600": product.errors[:meta_description].any?}] %>
-  </div>
+    <div class="grid grid-cols-2 gap-x-6 gap-y-4 w-1/2 mt-4">
+      <%= form.label :slug, class: "label" %>
+      <%= form.text_field :slug, class: "input" %>
 
-  <div class="my-5">
-    <%= form.label :meta_keywords %>
-    <%= form.text_field :meta_keywords, class: ["block shadow-sm rounded-md border px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": product.errors[:meta_keywords].none?, "border-red-400 focus:outline-red-600": product.errors[:meta_keywords].any?}] %>
-  </div>
+      <%= form.label :meta_title, "Meta Title (max 60 characters)", class: "label" %>
+      <%= form.text_field :meta_title, class: "input", placeholder: "This is the title of the product. It should be 50-60 characters long.", maxlength: 60 %>
 
-  <div class="my-5">
-    <%= form.label :meta_image %>
-    <%= form.file_field :meta_image, class: ["block shadow-sm rounded-md border px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": product.errors[:meta_image].none?, "border-red-400 focus:outline-red-600": product.errors[:meta_image].any?}] %>
-  </div>
+      <%= form.label :meta_description, "Meta Description (max 160 characters)", class: "label" %>
+      <%= form.text_area :meta_description, rows: 4, class: "textarea textarea-bordered w-full", placeholder: "This is a description of the product. It should be 150-160 characters long.", maxlength: 160 %>
 
-  <div class="inline">
+      <%= form.label :meta_keywords, "Meta Keywords (max 100 characters)", class: "label" %>
+      <%= form.text_field :meta_keywords, class: "input", placeholder: "e.g. 'product, product category, product type'" %>
+
+      <%= form.label :meta_image, class: "label" %>
+      <%= form.file_field :meta_image, class: "file-input file-input-bordered" %>
+    </div>
+  </fieldset>
+
+  <div class="inline mt-8 flex justify-end">
     <%= form.submit class: "btn btn-primary" %>
   </div>
 <% end %>
