--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -1,8 +1,7 @@
-<% content_for :title, "Editing #{@product.name}" %>
+<% content_for :title, "#{@product.name}" %>
 
 <div class="w-full bg-base-100 p-5 rounded-lg">
-  <h1 class="font-bold text-4xl">Editing <%= @product.sku %></h1>
-  <p class="text-sm text-gray-500"><%= @product.name %></p>
+  <h1 class="font-bold text-4xl"><%= @product.name %></h1>
 
   <%= render "form", product: @product %>
 
