--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,7 +18,7 @@
       <li class="text-lg font-medium"><%= link_to "Samples", samples_path, class: current_page?(samples_path) ? "text-accent" : "" %></li>
     </ul>
   </div>
-  
+
   <div class="navbar-center">
     <%= link_to root_path do %>
       <%= render "shared/logo" %>
@@ -28,7 +28,7 @@
   <div class="navbar-end">
     <%= render "shared/basket_counter" %>
 
-    <div class="dropdown dropdown-end">
+    <div class="p-6 dropdown dropdown-center dropdown-hover">
       <% if authenticated? %>
           <div tabindex="0" role="button" class="hover:cursor-pointer avatar avatar-placeholder">
             <div class="bg-neutral text-neutral-content w-10 rounded-full">
@@ -37,12 +37,27 @@
           </div>
         <ul
           tabindex="0"
-          class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+          class="menu dropdown-content bg-base-200 rounded-box z-[1] mt-3 w-48 p-2 shadow">
           <% if Current.user&.admin? %>
-            <li><%= link_to "Admin Panel", "/admin" %></li>
+            <li>
+              <%= link_to "/admin" do %>
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" /> <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" /> </svg>
+                Admin Panel
+              <% end %>
+            </li>
           <% end %>
-          <li><%= link_to "Orders", orders_path %></li>
-          <li><%= button_to "Logout", session_path, method: :delete %></li>
+          <li>
+            <%= link_to orders_path do %>
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1M21 12a9 9 0 11-18 0 9 9 0 0118 0z" /> </svg>
+              Orders
+            <% end %>
+          </li>
+          <li>
+            <%= link_to session_path, method: :delete do %>
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" /></svg>
+              Logout
+            <% end %>
+          </li>
         </ul>
       <% else %>
         <div class="flex items-center space-x-2">
