Create admin orders pages

--- a/app/views/admin/shared/_sidebar.html.erb
+++ b/app/views/admin/shared/_sidebar.html.erb
@@ -17,14 +17,14 @@
     </a>
   </li>
   <li>
-    <a>
+    <%= link_to admin_products_path do %>
       <svg
         xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-5 w-5">
         <path
           stroke-linecap="round" stroke-linejoin="round" d="M21 11.25v8.25a1.5 1.5 0 0 1-1.5 1.5H5.25a1.5 1.5 0 0 1-1.5-1.5v-8.25M12 4.875A2.625 2.625 0 1 0 9.375 7.5H12m0-2.625V7.5m0-2.625A2.625 2.625 0 1 1 14.625 7.5H12m0 0V21m-8.625-9.75h18c.621 0 1.125-.504 1.125-1.125v-1.5c0-.621-.504-1.125-1.125-1.125h-18c-.621 0-1.125.504-1.125 1.125v1.5c0 .621.504 1.125 1.125 1.125Z" />
       </svg>
       Products
-    </a>
+    <% end %>
   </li>
   <li>
     <a>
@@ -44,7 +44,7 @@
     </a>
   </li>
   <li>
-    <a>
+    <%= link_to admin_orders_path do %>
       <svg
         xmlns="http://www.w3.org/2000/svg"
         class="h-5 w-5"
@@ -58,7 +58,7 @@
           d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
       </svg>
       Orders
-    </a>
+    <% end %>
   </li>
   <li>
     <a>
