--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: [:admin, product], class: "contents") do |form| %>
+<%= form_with(model: [:admin, product], class: "contents", local: false) do |form| %>
   <% if product.errors.any? %>
     <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-md mt-3">
       <h2><%= pluralize(product.errors.count, "error") %> prohibited this product from being saved:</h2>
@@ -59,11 +59,13 @@
   <fieldset class="fieldset my-8">
     <legend class="fieldset-legend text-xl font-medium">Variants</legend>
 
-    <div id="variants" class="space-y-4">
+    <%= turbo_frame_tag "variants" do %>
       <%= form.fields_for :variants do |variant_form| %>
         <%= render "variant_fields", form: variant_form %>
       <% end %>
-    </div>
+    <% end %>
+
+    <%= link_to "Add Another Variant", new_variant_admin_product_path(form.object), class: "btn btn-secondary mt-4", data: { turbo_stream: true } %>
   </fieldset>
 
   <div class="inline mt-8 flex justify-end">
