Fix cart side drawer

--- a/app/views/cart_items/create.turbo_stream.erb
+++ b/app/views/cart_items/create.turbo_stream.erb
@@ -1,1 +1,2 @@
 <%= turbo_stream.replace "basket_counter", partial: "shared/basket_counter" %> 
+<%= turbo_stream.replace "drawer_cart_content", partial: "shared/drawer_cart_content" %>
