--- a/app/views/shared/_drawer_cart_content.html.erb
+++ b/app/views/shared/_drawer_cart_content.html.erb
@@ -1,4 +1,4 @@
-<div class="container mx-auto">
+<div id="drawer_cart_content" class="container mx-auto">
   <div class="flex items-center justify-between mb-4">
     <h2 class="text-xl font-bold">Shopping Basket</h2>
 
