--- a/app/views/pages/shop.html.erb
+++ b/app/views/pages/shop.html.erb
@@ -1,27 +1,3 @@
 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-  <% @products.each do |product| %>
-    <div class="card shadow-sm bg-base-100">
-      <figure class="max-w-[600px] max-h-[600px] bg-base-200">
-        <%= link_to product_path(product), class: "w-full h-full" do %>
-          <% if product.image.attached? %>
-            <%= image_tag product.image.variant(resize_to_limit: [400, 400]), class: "w-full h-full object-cover rounded-lg", alt: product.name %>
-          <% else %>
-            <div class="w-full h-[400px] lg:h-[400px] bg-gray-200 shadow-md flex items-center justify-center">
-              <span class="text-gray-500">Image not available</span>
-            </div>
-          <% end %>
-        <% end %>
-      </figure>
-      <div class="card-body text-center">
-        <h2 class="card-title justify-center">
-          <%= link_to product_path(product), class: "text-xl font-medium" do %>
-            <%= product.name %>
-          <% end %>
-        </h2>
-        <% if product.featured? %>
-          <div class="badge badge-secondary absolute top-2 right-2 z-10">FEATURED</div>
-        <% end %>
-      </div>
-    </div>
-  <% end %>
+  <%= render @products %>
 </div>
