--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,32 +1,3 @@
 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-  <% @products.each do |product| %>
-    <div class="card shadow-sm bg-base-100">
-      <figure class="max-w-[600px] max-h-[600px] bg-base-200">
-        <% if product.image.attached? %>
-          <%= link_to product_path(product) do %>
-            <%= image_tag product.image.variant(resize_to_limit: [400, 400]), class: "w-full h-full object-cover rounded-lg", alt: product.name %>
-          <% end %>
-        <% else %>
-          <div class="w-full h-[400px] lg:h-[400px] bg-base-200 flex items-center justify-center">
-            <span>Image not available</span>
-          </div>
-        <% end %>
-      </figure>
-      <div class="card-body text-center">
-        <h2 class="card-title justify-center">
-          <%= link_to product_path(product) do %>
-            <%= product.name %>
-          <% end %>
-        </h2>
-        <% if product.featured? %>
-          <div class="badge badge-secondary absolute top-2 right-2 z-10">FEATURED</div>
-        <% end %>
-        <div class="card-actions justify-center items-center mt-2">
-          <div class="text-base">
-            <%= number_to_currency product.price %>
-          </div>
-        </div>
-      </div>
-    </div>
-  <% end %>
+  <%= render @products %>
 </div>
