--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,14 @@
-<% content_for :title, "#{@product.name} | #{@product.category.name}" %>
+<% content_for :title do %>
+<%= @product.name %> | <%= @product.category.name %> | Afida
+<% end %>
+
+<% content_for :meta_description do %>
+<%= @product.description %>
+<% end %>
+
+<% content_for :breadcrumbs do %>
+  <%= render "shared/breadcrumbs", product: @product %>
+<% end %>
 
 <div class="drawer drawer-end">
   <input id="cart-drawer" type="checkbox" class="drawer-toggle" />
@@ -22,7 +32,7 @@
           </h2>
 
           <% if @product.colour.present? %>
-            <span class="text-base-content/60 font-medium text-lg">Colour: <%= @product.colour %></span>
+            <span class="text-base-content/60 font-medium text-lg"><%= @product.colour %></span>
           <% end %>
 
           <% if @product.pac_size.present? %>
@@ -48,25 +58,7 @@
             <%= number_to_currency @selected_variant.price %>
           </p>
 
-          <p class="text-base-content/70 my-4">
-            <%= @product.description %>
-          </p>
-
-          <h3 class="text-sm font-semibold my-4">Specifications</h3>
-          <% if @selected_variant.variant_attributes.any? %>
-            <div class="overflow-x-auto rounded-box border border-base-content/5 bg-base-100">
-              <table class="table table-zebra table-pin-cols">
-                <% @selected_variant.variant_attributes.each do |key, value| %>
-                  <tr>
-                    <td class="font-semibold"><%= key.to_s.humanize %></td>
-                    <td><%= value %></td>
-                  </tr>
-                <% end %>
-              </table>
-            </div>
-          <% end %>
-
-          <div class="card-actions justify-center space-x-3 my-4" x-data="{ quantity: 1 }">
+          <div class="card-actions space-x-3 my-4" x-data="{ quantity: 1 }">
             <div class="join">
               <button class="btn btn-square btn-primary btn-lg" @click="quantity = Math.max(1, quantity - 1)">-</button>
               <input type="text" x-model="quantity" class="font-mono input input-lg w-12 text-center" />
@@ -81,6 +73,28 @@
               <% end %>
             </div>
           </div>
+
+          <p class="text-base-content/70 my-4">
+            <%= @product.description %>
+          </p>
+
+          <% if @selected_variant.variant_attributes.any? %>
+            <div class="overflow-x-auto rounded-box border border-base-content/5 bg-base-100">
+              <table class="table table-zebra table-pin-cols">
+                <thead>
+                  <tr>
+                    <th colspan="2" class="bg-base-200 font-medium">Specifications</th>
+                   </thead>
+                <tbody>
+                <% @selected_variant.variant_attributes.each do |key, value| %>
+                  <tr>
+                    <td class="font-semibold"><%= key.to_s.humanize %></td>
+                    <td><%= value %></td>
+                  </tr>
+                <% end %>
+              </table>
+            </div>
+          <% end %>
         </div>
       </div>
     </div>
