Add category links to homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -80,7 +80,7 @@
         <p class="text-neutral/70 mb-4">Made from 100% recycled materials</p>
       </div>
       <p></p>
-      <%= link_to "Shop Pizza Boxes", "#", class: "btn btn-primary w-full rounded-full text-lg" %>
+      <%= link_to "Shop Pizza Boxes", category_path("pizza-boxes"), class: "btn btn-primary w-full rounded-full text-lg" %>
     </div>
   </div>
 
@@ -94,7 +94,7 @@
         <p class="text-neutral/70 mb-4">Plant-based materials that break down naturally</p>
       </div>
       <p></p>
-      <%= link_to "Shop Cold Cups", "#", class: "btn btn-primary w-full rounded-full text-lg" %>
+      <%= link_to "Shop Cold Cups", category_path("cold-cups-and-lids"), class: "btn btn-primary w-full rounded-full text-lg" %>
     </div>
   </div>
 
@@ -108,7 +108,7 @@
         <p class="text-neutral/70 mb-4">Made from 100% recycled materials</p>
       </div>
       <p></p>
-      <%= link_to "Shop Ice Cream Cups", "#", class: "btn btn-primary w-full rounded-full text-lg" %>
+      <%= link_to "Shop Ice Cream Cups", category_path("ice-cream-cups"), class: "btn btn-primary w-full rounded-full text-lg" %>
     </div>
   </div>
 
@@ -122,7 +122,7 @@
         <p class="text-neutral/70 mb-4">Made from 100% recycled materials</p>
       </div>
       <p></p>
-      <%= link_to "Shop Straws", "#", class: "btn btn-primary w-full rounded-full text-lg" %>
+      <%= link_to "Shop Straws", category_path("straws"), class: "btn btn-primary w-full rounded-full text-lg" %>
     </div>
   </div>
 
@@ -136,7 +136,7 @@
         <p class="text-neutral/70 mb-4">Made from 100% recycled materials</p>
       </div>
       <p></p>
-      <%= link_to "Shop Napkins", "#", class: "btn btn-primary w-full rounded-full text-lg" %>
+      <%= link_to "Shop Napkins", category_path("napkins"), class: "btn btn-primary w-full rounded-full text-lg" %>
     </div>
   </div>
 
@@ -150,7 +150,7 @@
         <p class="text-neutral/70 mb-4">Made from 100% recycled materials</p>
       </div>
       <p></p>
-      <%= link_to "Shop Hot Cups", "#", class: "btn btn-primary w-full rounded-full text-lg" %>
+      <%= link_to "Shop Hot Cups", category_path("hot-cups"), class: "btn btn-primary w-full rounded-full text-lg" %>
     </div>
   </div>
 </div>
